	* `--hyperlink-source` now uses Haddock's hyperlinker backend when
	  Haddock is new enough, falling back to HsColour otherwise.
	* `D.S.defaultHookedPackageDesc` has been deprecated in favour of
	  `D.S.findHookedPackageDesc` (#4874).
	* `D.S.getHookedBuildInfo` now takes an additional parameter
	  specifying the build directory path (#4874).
	* TODO

2.0.1.1 Mikhail Glushenkov <mikhail.glushenkov@gmail.com> December 2017
	* Don't pass `other-modules` to stub executable for detailed-0.9
	(#4918).
	* Hpc: Use relative .mix search paths (#4917).

2.0.1.0 Mikhail Glushenkov <mikhail.glushenkov@gmail.com> November 2017
	* Support for GHC's numeric -g debug levels (#4673).
	* Added a new 'Distribution.Verbosity.modifyVerbosity' combinator
	  (#4724).
	* Added a new 'cabal check' warning about unused, undeclared or
	  non-Unicode flags.  Also, it warns about leading dash, which is
	  unusable but accepted if it's unused in conditionals. (#4687)
	* Modify `allBuildInfo` to include foreign library info (#4763).
	* Documentation fixes.

2.0.0.2 Mikhail Glushenkov <mikhail.glushenkov@gmail.com> July 2017
	* See http://coldwa.st/e/blog/2017-09-09-Cabal-2-0.html
	  for more detailed release notes.
	* The 2.0 migration guide gives advice on adapting Custom setup
	  scripts to backwards-incompatible changes in this release:
	  https://github.com/haskell/cabal/wiki/2.0-migration-guide
	* Add CURRENT_PACKAGE_VERSION to cabal_macros.h (#4319)
	* Dropped support for versions of GHC earlier than 6.12 (#3111).
	* GHC compatibility window for the Cabal library has been extended
	  to five years (#3838).
	* Convenience/internal libraries are now supported (#269).
	  An internal library is declared using the stanza "library
	  'libname'".  Packages which use internal libraries can
	  result in multiple registrations; thus '--gen-pkg-config'
	  can now output a directory of registration scripts rather than
	  a single file.
	* Backwards incompatible change to preprocessor interface: